--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "APP": {
     "license": "",
-    "port": 8880,
+    "port": 8008,
     "timer_mins": 15,
-    "title": "VPAS"
+    "title": "DIS BSFW"
   },
   
   "MENUS": {
