--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
-  "name": "bsfw",
-  "version": "0.0.1",
-  "description": "Bootstrap Framework",
-  "keywords": [],
-  "author": "DiS",
-  "license": "Unlicense",
-  
+  "_from": "git+https://github.com/diginfo/bsfw.git",
+  "_id": "bsfw@0.0.1",
+  "_inBundle": false,
+  "_integrity": "",
+  "_location": "/bsfw",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "git",
+    "raw": "git+https://github.com/diginfo/bsfw.git",
+    "rawSpec": "git+https://github.com/diginfo/bsfw.git",
+    "saveSpec": "git+https://github.com/diginfo/bsfw.git",
+    "fetchSpec": "https://github.com/diginfo/bsfw.git",
+    "gitCommittish": null
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "git+https://github.com/diginfo/bsfw.git#79ca507875e9faa49ac58c013614a5ba6f497442",
+  "_spec": "git+https://github.com/diginfo/bsfw.git",
+  "_where": "/usr/share/dev/nodejs/src/visual/pas/v2/node",
+  "author": {
+    "name": "DiS"
+  },
+  "bin": {
+    "bsfw": "index.js"
+  },
+  "bugs": {
+    "url": "https://github.com/diginfo/bsfw/issues"
+  },
+  "bundleDependencies": false,
   "dependencies": {
     "async": "*",
     "body-parser": "*",
@@ -19,15 +43,32 @@
     "tedious": "*"
   },
   
-  "scripts": {
-  },
-  
-  "main": "index.js",
-  "bin": "index.js",
+  "pkg": {
     
+    "scripts": [
+      "lib/**/*.js",
+      "test/**/*.js"
+    ],
+    
+    "assets": [
+      "public/**/*",
+      "sql/**/*",
+      "views/**/*"
+    ]
+  },
+
+  "deprecated": false,
+  "description": "Bootstrap Framework",
+  "homepage": "https://github.com/diginfo/bsfw#readme",
+  "keywords": [],
+  "license": "Unlicense",
+  "main": "index.js",
+  "name": "bsfw",
   "repository": {
     "type": "git",
-    "url": "git@github.com:diginfo/bsfw.git",
+    "url": "git+ssh://git@github.com/diginfo/bsfw.git",
     "private": true
-  }
+  },
+  "scripts": {},
+  "version": "0.0.1"
 }
