--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     "port": 8008,
     "timer_mins": 15,
     "title": "DIS BSFW",
-    "disable_login": false
+    "disable_login": false,
+    "debug" : true
   },
   
   "MENUS": {
